# Options from CMakeLists.txt
option('build_shared_libs', type: 'boolean', value: true, description: 'Build shared library')
option('build_shared_deps_libs', type: 'boolean', value: false, description: 'Build submodules as shared libraries')
option('use_gnutls', type: 'boolean', value: false, description: 'Use GnuTLS instead of OpenSSL')
option('use_mbedtls', type: 'boolean', value: false, description: 'Use Mbed TLS instead of OpenSSL')
option('use_nice', type: 'boolean', value: false, description: 'Use libnice instead of libjuice')
option('prefer_system_lib', type: 'boolean', value: false, description: 'Prefer system libraries over submodules')
option('use_system_srtp', type: 'boolean', value: false, description: 'Use system libSRTP')
option('use_system_juice', type: 'boolean', value: false, description: 'Use system libjuice')
option('use_system_usrsctp', type: 'boolean', value: false, description: 'Use system libusrsctp')
option('use_system_plog', type: 'boolean', value: false, description: 'Use system Plog')
option('use_system_json', type: 'boolean', value: false, description: 'Use system Nlohmann JSON')
option('no_websocket', type: 'boolean', value: false, description: 'Disable WebSocket support')
option('no_media', type: 'boolean', value: false, description: 'Disable media transport support')
option('no_examples', type: 'boolean', value: false, description: 'Disable examples')
option('no_tests', type: 'boolean', value: false, description: 'Disable tests build')
option('warnings_as_errors', type: 'boolean', value: false, description: 'Treat warnings as errors')
option('sctp_debug', type: 'boolean', value: false, description: 'Enable SCTP debugging output')
